# cloudwalk

./: .gitignore  Dockerfile  README.md  answers.ipynb  docker-compose.yml  pyproject.toml  run.sh
cloudwalk/: app.py  email_handler.py  main.py  scheduler.py  schemas.py  settings.py
cloudwalk/db/: engine.py  models.py
cloudwalk/routes/: clients.py
cloudwalk/sql/: question_3.sql  question_4.sql
migrations/: env.py
migrations/versions/: 0d82ccbd5dee_insert_loans_data.py  0d82ccbd5dee_insert_loanss_data.py  3168150c1208_insert_clients_data.py  397c930c2bfd_create_tables.py  c034cc51bd9b_create_users_table.py
sql/: question_1.sql  question_2.sql  question_5.sql  question_6.sql
tests/: conftest.py  test_e2e.py
