[tool.poetry]
name = "cloudwalk"
version = "0.1.0"
description = ""
authors = ["jpmarques <jpmarquesdeoliveira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.350"
pytest = "^8.0.0"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
