[tool.poetry]
name = "cloudwalk"
version = "0.1.0"
description = ""
authors = ["jpmarques <jpmarquesdeoliveira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.9"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.350"
pytest = "^8.0.0"
blue = "^0.9.1"
alembic = "^1.13.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
